syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ds.pubsub.proto";

service HelloService {
    rpc Hello(HelloMessage) returns (HelloResponse) {}
}

message HelloMessage {
    string id =1 ;
}

message HelloResponse {
    string message = 1 ;
}